--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -450,7 +450,7 @@ block content
         .main
             +b.offer
                 +e.wrapper.container
-                    +e.title Проектно-строительная компания
+                    +e.title Водоснабжение под ключ 
                     +e.description Работаем в Ростов-на-дону и Ростовской области
                     +b.btn.btn_view_light.offer__btn
                         +e.text Записаться на консультацию
@@ -557,7 +557,84 @@ block content
                                             +e({tag: 'a'}).link на обработку персональных данных 
                 
                 .container
-                                 
+                    h2 Услуга “Комплексное водоснабжение”
+                    p Комплексное водоснабжение - емкий процесс, который подразумевает под собой работу сразу нескольких специалистов: проектировщика, специалиста по оформлению технической документации, юриста, инженера-прораба, монтажников-строителей. 
+                    p Компания “БК Инвент” имеет продуктивный опыт работы с АО “Ростовводоканал”, а также (Посмотреть, как называется водоканал в Азове, Аксае), что позволяет провести все работы не дольше, чем за 3 месяца и гарантировать получение лицевого счета. 
+                    p В течение 2018 года организацией “БК Инвент” было подключено 127 объектов статуса ИЖС, а также 48  объектов коммерческого и муниципального назначения к центральной магистрали водоснабжения. 
+                    
+                    +b.deadlines
+                        +e.header Этапы работ водоснабжения “под ключ”
+                        +e.wrapper
+                            +e.item
+                                +e.stage
+                                    +e.number 
+                                        span 1
+                                        |этап
+                                +e.body
+                                    +e.title Предпроектные работы, включает в себя: 
+                                    +e.text
+                                        ul.list.list_type_check
+                                            li Выезд инженера на исследование объекта, снятие исходных данных, замеры
+                                            li Проверка перечня документов, используемых в ходе всех этапов работ
+                                            li Расчет баланса водопотребления и водоотведения
+                                            li Подготовка ситуационного плана - схемы земельного участка, оформленная по условным обозначениям, предусмотренным для масштабов 1:1000-1:5000
+                                            li Выполнение и согласование топографической съемки в масштабе 1:500 с указанием всех надземных и подземных коммуникаций
+                                +e.time-wrapper
+                                    +e.time Сроки выполнения: 1 месяц
+                            +e.item
+                                +e.stage
+                                    +e.number 
+                                        span 2
+                                        |этап
+                                +e.body
+                                    +e.title Получение основания для проектирования (ТУ и/или договора на подключение)
+                                    +e.text
+                                        ul.list.list_type_check
+                                            li Сбор полного перечня документов в соответствии с п. 90 «Правил холодного водоснабжения и водоотведения», утвержденных постановлением Правительства РФ от 29.07.2013 г. № 644
+                                            li Подача заявления на ТУ и/или договора на подключение
+                                            li Получение договора, передача клиенту на подпись и оплату квитанций
+                                        b Справочно: 
+                                        p Регламентированный срок получения технических условий и/или договора на подключение:
+                                        ul.list
+                                            li Технические условия – не более 14 рабочих дней
+                                            li Договор на подключение – не более 20 рабочих дней
+                                        p Технические условия являются бесплатными и выдаются только при условии, если абонент уже имеет лицевой счет (подабонента, подключен к другой сети). 
+                                        p Договор на подключение является платным и оплачивается в кассу Водоканала и рассчитывается, исходя из максимальной нагрузки водопотребления (водоотведения).
+                                        p Приказом РСТ РО от 20.12.2018 г. № 85/17 на 2019-2023 годы для АО «Ростовводоканал» установлены следующие ставки тарифов на подключаемую (технологически присоединяемую) нагрузку (без учёта НДС):
+                                        ul.list
+                                            li К централизованной системе холодного водоснабжения: 62,183 тыс. руб. за куб. м в сутки, без НДС;
+                                        p 
+                                            |Таким образом, стоимость договора на подключение вычисляется следующим образом, 
+                                            b пример: 
+                                        ul.list
+                                            li 0,84 м3 * 62183 = 52233; 52233 + 20% ( НДС)  =  62679 рублей.
+                                +e.time-wrapper
+                                    +e.time Сроки выполнения: 1 месяц
+                            +e.item
+                                +e.stage
+                                    +e.number 
+                                        span 3
+                                        |этап
+                                +e.body
+                                    +e.title Проектирование и согласование проекта
+                                    +e.text
+                                        ul.list.list_type_check
+                                            li Обследование объекта инженером-проектировщиком
+                                            li Создание полного пакета чертежей стадии РД (общие данные, план сетей, профиль, таблица колодцев, спецификация)
+                                            li Согласования со всеми необходимыми инстанциями города, которых насчитывается порядка 16 организаций. Среди эксплуатирующих:  АО “Ростовводоканал”, ПАО “Газпромгазораспределение”, МУП “РТК”, АО “Донэнерго”, ПАО “Ростелеком”, ОАО “РЖД”, ООО “Ростовские тепловые сети” и т.д.. Среди административных:  Департамент автодорог, Департамент окружающей среды и департамент архитектуры. 
+                            +e.item
+                                +e.stage
+                                    +e.number 
+                                        span 4
+                                        |этап
+                                +e.body
+                                    +e.title Получение исходно-разрешительной документации 
+                                    +e.text
+                                        P Для того, чтобы осуществлять строительно-монтажные работы за пределами вашего участка, необходимо получить разрешение от двух инстанций:
+                                        ul.list.list_type_check
+                                            li ГИБДД – согласовать схему дорожного движения
+                                            li Управление благоустройством района администрации города, в котором будут производиться работы  – получение ордера на разрытие (по закрытии которого мы получаем справку о благоустройстве -  неотъемлемый документ при сдачи сети в Водоканал)
+
 
                     +b.cases
                         +e.items
@@ -666,31 +743,7 @@ block content
                                             |Подробне
                                             +e.arrow
                         
-                    +b.deadlines
-                        +e.header Как мы работаем
-                        +e.wrapper
-                            +e.item
-                                +e.stage
-                                    +e.number 
-                                        span 1
-                                        //br
-                                        |этап
-                                +e.body
-                                    +e.title Ваш шедевр готов!
-                                    +e.text Не следует, однако забывать, что консультация с широким активом требуют определения и уточнения направлений прогрессивного р азвития. Таким образом сложившаяся структура организации требуют от нас анализа форм развития. Повседневная практика показывает, что новая модель организационной деятельности обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. 
-                                +e.time-wrapper
-                                    +e.time Сроки выполнения: 1 месяц
-                            +e.item
-                                +e.stage
-                                    +e.number 
-                                        span 1
-                                        //br
-                                        |этап
-                                +e.body
-                                    +e.title Ваш шедевр готов!
-                                    +e.text Не следует, однако забывать, что консультация с широким активом требуют определения и уточнения направлений прогрессивного р азвития. Таким образом сложившаяся структура организации требуют от нас анализа форм развития. Повседневная практика показывает, что новая модель организационной деятельности обеспечивает широкому кругу (специалистов) участие в формировании направлений прогрессивного развития. 
-                                +e.time-wrapper
-                                    +e.time Сроки выполнения: 1 месяц
+                    
 
                     +b.stages
                         +e.header Как мы работаем
