--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -450,6 +450,13 @@ block content
         .main
             +b.offer
                 +e.wrapper.container
+                    +b.breadcrumbs
+                        +e.wrapper
+                            +e.home
+                            .arrow.arrow_right.arrow_theme_light
+                            +e({tag:'a'}).item О нас
+                            .arrow.arrow_right.arrow_theme_light
+                            +e({tag:'a'}).item О нас
                     +e.title Водоснабжение под ключ 
                     +e.description Работаем в Ростов-на-дону и Ростовской области
                     +b.btn.btn_view_light.offer__btn
@@ -459,104 +466,35 @@ block content
             //- +b.btn.btn_view_pseudo
             //-     +e.text Записаться на консультацию
             
-            .container
-                +b.breadcrumbs
-                    +e.home
-                    .arrow.arrow_right
-                    +e({tag:'a'}).item О нас
-                    .arrow.arrow_right
-                    //+e.separator 
-                    +e({tag:'a'}).item О нас
+            
+            
             .content
-                +b.price
-                    +e.item
-                        +e.title Предпроектные + проектные работы
-                        +e.box от 35 000 рублей 
-                        
-                    +e.item
-                        +e.title Исполнительная документация + получение лицевого счета
-                        +e.box от 28000 рублей
-                    +e.item
-                        +e.form
-                            +e.title Строительно монтажные работы
-                            +e.box
-                                form.form.ajax
-                                    +e.grup
-                                        .input
-                                            .input__box
-                                                .input__top-border
-                                                .input__title Длина трубопровода
-                                                input(name='a' data-postfix=" м." data-grid-num="9" data-min="0" data-max="500" data-from="200" ).input__control.range-slider
-                                        .input
-                                            .input__box
-                                                .input__top-border
-                                                .input__title Диаметр трубопровода
-                                                //- .input__icon
-                                                input(name='a' data-postfix=" мм." data-grid-num="6" data-from="1" data-values="8, 10, 12, 15, 20, 25, 32, 40, 50, 70, 100").input__control.range-slider
-                                    .input
-                                        .input__box
-                                            .input__top-border
-                                            .input__title Кол-во колодцев
-                                            //- .input__icon
-                                            input(name='v' data-min="1" data-max="10" data-grid-num="9" data-from="1" data-max-postfix="+").input__control.range-slider
-                                        .input__message(data-default="Кол-во колодцев, которые необходимо строить")
-                                    .input
-                                        .input__box
-                                            .input__top-border
-                                            .input__title Диаметр магистральной трубы
-                                            //- .input__icon
-                                            input(name='a').input__control
-                                        .input__message(data-default="Диаметр и материал магистральной трубы")
-                                    .input
-                                        .input__box
-                                            .input__top-border
-                                            .input__title Материал магистральной трубы
-                                            //- .input__icon
-                                            input(name='v'  data-from="1" data-values="Металл, ПВХ, ПВДФ, РЕХ").input__control.range-slider
-                                        .input__message(data-default="Диаметр и материал магистральной трубы")
-                                    .input.input_type_name
-                                        .input__box
-                                            .input__top-border
-                                            .input__title Имя
-                                            //- .input__icon
-                                            input(name='name').input__control
-                                        .input__message(data-default="Укажите точно как в паспорте")
-                                    .input.input_type_phone
-                                        .input__box
-                                            .input__top-border
-                                            .input__title Телефон
-                                            //- .input__icon
-                                            input(name='phone').input__control
-                                            //- label(for="name") 123                                       
-                                    .input.input_type_email
-                                        .input__box
-                                            .input__top-border
-                                            .input__title Email
-                                            //- .input__icon
-                                            input(name='email').input__control
-                                        .input__message
-
-                                    |Материал магистральной трубы
-                                    +b.radio 
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='ok2' type='radio').radio__control
-                                            .radio__box
-                                            .radio__text Пригласить
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='ok2' type='radio').radio__control
-                                            .radio__box
-                                            .radio__text  Не приглашать                                  
-                                    button(type="submit").btn.btn_view_action
-                                        .btn__text Записаться на консультацию
-                                    +b.checkbox.checkbox_theme_light 
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='privacy' type='checkbox' checked).checkbox__control
-                                            .checkbox__box
-                                        .checkbox__text 
-                                            |Согласен  
-                                            +e({tag: 'a'}).link на обработку персональных данных 
-                
                 .container
+                    .row
+                        .col.col_size_4.col_size-sm_2
+                            h4 Исходные данные (проблемы)
+                            ul.list 
+                                li Вы построили дом и хотите подключить центральный водопровод?
+                                li У вас был водопровод от соседа, и вам стало необходимо переподключиться к магистральной линии воды?
+                                li Вы купили участок и собираетесь строить дом, а для строительства необходимо водоснабжение?
+                                li Вы купили дом, и не знаете, как у вас обстоят дела с документами на воду?
+
+                        .col.col_size_4.col_size-sm_2
+                            h4 Результат
+                            p Мы предлагаем вам:
+                            ul.list.list_type_check
+                                li Провести предпроектные работы
+                                li Создать проект на водопровод и согласовать его
+                                li Построить сеть водопровода, согласно СП и СНиП
+                                li Сформировать исполнительную документацию, согласно перечня документов АО “Ростовводоканал”
+                                li Сдать сеть в эксплуатацию
+                                li Получить лицевой счет
+                            p.
+                                <b>Итого:</b> вы получаете водоснабжение и полный перечень документов, который позволит безопасно пользоваться коммуникацией бессрочно. 
+                                Со всем перечнем документов, вы можете ознакомиться, скачав файл: 
+                                Скачать файл (памятка, и все что в итоге получит клиент) 
+
+
                     h2 Услуга “Комплексное водоснабжение”
                     p Комплексное водоснабжение - емкий процесс, который подразумевает под собой работу сразу нескольких специалистов: проектировщика, специалиста по оформлению технической документации, юриста, инженера-прораба, монтажников-строителей. 
                     p Компания “БК Инвент” имеет продуктивный опыт работы с АО “Ростовводоканал”, а также (Посмотреть, как называется водоканал в Азове, Аксае), что позволяет провести все работы не дольше, чем за 3 месяца и гарантировать получение лицевого счета. 
