--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -617,7 +617,8 @@
 
 .offer
     width 100%
-    height 400px
+    //height 400px
+    padding 5px 0 60px 0
     background #7886ef url(../images/offer.jpg) center no-repeat
     background-size cover
     box-shadow inset 0px 4px 20px 0px rgba(0, 0, 0, 0.2)
@@ -789,16 +790,20 @@ ul.list
 
 .breadcrumbs
     width 100%
-    display flex
-    flex-direction row
-    align-items center
-    margin 20px 0 10px 0
+    //border-bottom 1px solid #ddd
+    margin 20px 0 40px 0
+    &__wrapper
+        display flex
+        flex-direction row
+        align-items center
+        //margin 20px auto
     &__item
         font-size 14px
         line-height 1.2em
         display inline-block
         cursor pointer
         margin 0 8px
+        color #fff
     &__home
         width 15px
         height 13px
@@ -2390,3 +2395,58 @@ ul.list
     overflow hidden
     border 3px solid transparent
     border-top-color #d6dcf5
+
+
+.row
+    justify-content space-between
+    row-flex()
+.col
+    col()
+    size(12)
+    &_size
+        &_1
+            size(3)
+        &_2
+            size(6)
+        &_3
+            size(9)
+        &-xs
+            @media (min-width 560px)
+                &_1
+                    size(3)
+                &_2
+                    size(6)
+                &_3
+                    size(9)
+                &_4
+                    size(12)
+        &-sm
+            @media (min-width 780px)
+                &_1
+                    size(3)
+                &_2
+                    size(6)
+                &_3
+                    size(9)
+                &_4
+                    size(12)
+        &-md
+            @media (min-width 960px)
+                &_1
+                    size(3)
+                &_2
+                    size(6)
+                &_3
+                    size(9)
+                &_4
+                    size(12)
+        &-lg
+            @media (min-width 1100px)
+                &_1
+                    size(3)
+                &_2
+                    size(6)
+                &_3
+                    size(9)
+                &_4
+                    size(12)
