--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -482,13 +482,13 @@ block content
                             +e.box
                                 form.form.ajax
                                     .row
-                                        .col.col_size-sm_2
+                                        .col.col_size-sm_6
                                             .input
                                                 .input__box
                                                     .input__top-border
                                                     .input__title Длина трубопровода
                                                     input(name='a' data-postfix=" м." data-grid-num="9" data-min="0" data-max="500" data-from="200" ).input__control.range-slider
-                                        .col.col_size-sm_2
+                                        .col.col_size-sm_6
                                             .input
                                                 .input__box
                                                     .input__top-border
@@ -496,14 +496,14 @@ block content
                                                     //- .input__icon
                                                     input(name='a' data-postfix=" мм." data-grid-num="6" data-from="1" data-values="8, 10, 12, 15, 20, 25, 32, 40, 50, 70, 100").input__control.range-slider
                                     .row
-                                        .col.col_size-sm_2
+                                        .col.col_size-sm_6
                                             .input
                                                 .input__box
                                                     .input__top-border
                                                     .input__title Кол-во колодцев
                                                     input(name='v' data-min="1" data-max="10" data-grid-num="9" data-from="1" data-max-postfix="+").input__control.range-slider
                                                 .input__message(data-default="Кол-во колодцев, которые необходимо строить")
-                                        .col.col_size-sm_2
+                                        .col.col_size-sm_6
                                                 .input
                                                     .input__box
                                                         .input__top-border
@@ -511,66 +511,59 @@ block content
                                                         input(name='v' data-min="1" data-max="10" data-grid-num="9" data-from="1" data-max-postfix="+").input__control.range-slider
                                                     .input__message(data-default="7777")
                                     
-                                    |Материал магистральной трубы
-                                    +b.radio 
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='ok2' type='radio').radio__control
-                                            .radio__box
-                                            .radio__text Металл
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='ok2' type='radio').radio__control
-                                            .radio__box
-                                            .radio__text ПВХ
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='ok2' type='radio').radio__control
-                                            .radio__box
-                                            .radio__text ПВДФ
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='ok2' type='radio').radio__control
-                                            .radio__box
-                                            .radio__text РЕХ
-                                    .input.input_type_name
-                                        .input__box
-                                            .input__top-border
-                                            .input__title Имя
-                                            //- .input__icon
-                                            input(name='name').input__control
-                                        .input__message(data-default="Укажите точно как в паспорте")
-                                    .input.input_type_phone
-                                        .input__box
-                                            .input__top-border
-                                            .input__title Телефон
-                                            //- .input__icon
-                                            input(name='phone').input__control
-                                            //- label(for="name") 123                                       
-                                    .input.input_type_email
-                                        .input__box
-                                            .input__top-border
-                                            .input__title Email
-                                            //- .input__icon
-                                            input(name='email').input__control
-                                        .input__message
-
-                                    |Материал магистральной трубы
-                                    +b.radio 
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='ok2' type='radio').radio__control
-                                            .radio__box
-                                            .radio__text Пригласить
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='ok2' type='radio').radio__control
-                                            .radio__box
-                                            .radio__text  Не приглашать                                  
-                                    button(type="submit").btn.btn_view_action
-                                        .btn__text Записаться на консультацию
-                                    +b.checkbox.checkbox_theme_light 
-                                        +e({tag: 'label'}).item                                     
-                                            input(name='privacy' type='checkbox' checked).checkbox__control
-                                            .checkbox__box
-                                        .checkbox__text 
-                                            |Согласен  
-                                            +e({tag: 'a'}).link на обработку персональных данных 
-                
+                                    .row
+                                        .col
+                                            |Материал магистральной трубы
+                                            +b.radio.radio_row
+                                                +e({tag: 'label'}).item                                     
+                                                    input(name='ok2' type='radio').radio__control
+                                                    .radio__box
+                                                    .radio__text Металл
+                                                +e({tag: 'label'}).item                                     
+                                                    input(name='ok2' type='radio').radio__control
+                                                    .radio__box
+                                                    .radio__text ПВХ
+                                                +e({tag: 'label'}).item                                     
+                                                    input(name='ok2' type='radio').radio__control
+                                                    .radio__box
+                                                    .radio__text ПВДФ
+                                                +e({tag: 'label'}).item                                     
+                                                    input(name='ok2' type='radio').radio__control
+                                                    .radio__box
+                                                    .radio__text РЕХ
+                                    .row
+                                        .col.col_offset-sm_3.col_size_6
+                                            .input.input_type_name
+                                                .input__box
+                                                    .input__top-border
+                                                    .input__title Имя
+                                                    //- .input__icon
+                                                    input(name='name').input__control
+                                                .input__message(data-default="Укажите точно как в паспорте")
+                                            .input.input_type_phone
+                                                .input__box
+                                                    .input__top-border
+                                                    .input__title Телефон
+                                                    //- .input__icon
+                                                    input(name='phone').input__control
+                                                    //- label(for="name") 123                                       
+                                            .input.input_type_email
+                                                .input__box
+                                                    .input__top-border
+                                                    .input__title Email
+                                                    //- .input__icon
+                                                    input(name='email').input__control
+                                                .input__message                                                              
+                                            button(type="submit").btn.btn_view_action
+                                                .btn__text Записаться на консультацию
+                                            +b.checkbox.checkbox_theme_light 
+                                                +e({tag: 'label'}).item                                     
+                                                    input(name='privacy' type='checkbox' checked).checkbox__control
+                                                    .checkbox__box
+                                                .checkbox__text 
+                                                    |Согласен  
+                                                    +e({tag: 'a'}).link на обработку персональных данных 
+                        
                 .container
                                  
 
