--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1338,7 +1338,7 @@ ul.list
             right 10px
 
 .stages
-    margin-bottom 50px
+    margin 80px 0
     &__header
         color #3d3d3d
         font-size 20px
@@ -1347,6 +1347,10 @@ ul.list
         text-align center
         @media (min-width 600px)
             font-size 24px
+    &__btn
+        width auto
+        display inline-block
+        margin-top 10px
     &__item
         display grid
         grid-template-areas 'image title' 'text text' 'line line'
@@ -1421,7 +1425,7 @@ ul.list
 
 
 .deadlines
-    margin-bottom 50px
+    margin 80px 0 50px 0
     &__header
         color #3d3d3d
         font-size 20px
@@ -1952,6 +1956,13 @@ ul.list
     // position relative
     // display inline-block
     // margin-bottom 0.6em
+    &_row
+        display flex
+        flex-wrap wrap
+        .radio__item
+            margin-right 1.6em
+            &:last-child
+                margin-right 0
     &_error
         .radio__box
             border 2px solid #f95555 !important
@@ -2160,45 +2171,23 @@ ul.list
         transform translateX(-50%)
 
 .price
-    @media (min-width 1000px)
-        display grid
-        grid-template-areas 'stage1 stage2 ' 'stage3  stage2'
-        grid-template-columns calc(20%) 80%
-    @media (min-width 1160px)
-        margin auto
-        width 1160px
+    margin 40px 0
+    background #f5f5f5 radial-gradient(at top, #ddd, #f5f5f5)
+    padding 40px 0
+    box-shadow inset 0px 4px 20px 0px rgba(0,0,0,0.09)
     &__form
-        margin-top 0px
-    &__item
-        &:nth-child(1)
-            grid-area stage1
-        &:nth-child(2)
-            grid-area stage3
-        &:nth-child(3)
-            grid-area stage2
-            padding 0 10px
-    &__grup
-        display flex
-        justify-content space-between
-        .input
-            width calc(50% - 5px) !important
-    &__title
-        background #ddd
-        padding 10px
-        text-align center
-        border-radius 8px 8px 0 0
-        font-size 20px
-        line-height 1em
-        padding 20px 10px
-        text-align center
-        background #11244d
-        color #fff
-        font-weight 300
-    &__box
-        border 1px solid #ddd
-        border-top none
-        border-radius 0 0 8px 8px
-        padding 10px
+    &__calculator
+        padding 20px
+        background #fff
+        border-radius 10px
+        box-shadow 5px 0 35px 0 #ddd
+    &__form
+        grid-area form
+        margin-top 20px
+    &__calculator
+        grid-area calculator
+    &__text
+        margin-top 40px
 
 
 
@@ -2345,9 +2334,13 @@ ul.list
         top 28px
         width 20px
         height 20px
-        border 3px solid #2b519e
-        background-color #fff
+        //border 3px solid #2b519e
+        background-color #2b519e
         border-radius 20px
+        i
+            height 10px 
+            widows 1px
+            background #fff
     .irs-grid
         height 25px
     .irs-grid-pol
@@ -2398,55 +2391,67 @@ ul.list
 
 
 .row
-    justify-content space-between
+    //justify-content space-between
     row-flex()
 .col
     col()
-    size(12)
-    &_size
-        &_1
-            size(3)
-        &_2
-            size(6)
-        &_3
-            size(9)
+    &_size        
+        for $n in (1..12)
+            &_{$n}
+                size($n)
         &-xs
             @media (min-width 560px)
-                &_1
-                    size(3)
-                &_2
-                    size(6)
-                &_3
-                    size(9)
-                &_4
-                    size(12)
+                for $n in (1..12)
+                    &_{$n}
+                        size($n)
         &-sm
             @media (min-width 780px)
-                &_1
-                    size(3)
-                &_2
-                    size(6)
-                &_3
-                    size(9)
-                &_4
-                    size(12)
+                for $n in (1..12)
+                    &_{$n}
+                        size($n)
         &-md
             @media (min-width 960px)
-                &_1
-                    size(3)
-                &_2
-                    size(6)
-                &_3
-                    size(9)
-                &_4
-                    size(12)
+                for $n in (1..12)
+                    &_{$n}
+                        size($n)
         &-lg
             @media (min-width 1100px)
-                &_1
-                    size(3)
-                &_2
-                    size(6)
-                &_3
-                    size(9)
-                &_4
-                    size(12)
+                for $n in (1..12)
+                    &_{$n}
+                        size($n)
+    &_offset
+        for $n in (1..12)
+            &_{$n}
+                shift-left($n)
+        &-xs
+            @media (min-width 560px)
+                for $n in (1..12)
+                    &_{$n}
+                        shift-left($n)
+        &-sm
+            @media (min-width 780px)
+                for $n in (1..12)
+                    &_{$n}
+                        shift-left($n)
+        &-md
+            @media (min-width 960px)
+                for $n in (1..12)
+                    &_{$n}
+                        shift-left($n)
+        &-lg
+            @media (min-width 1100px)
+                for $n in (1..12)
+                    &_{$n}
+                        shift-left($n)
+
+.form
+    &__row
+        margin-bottom 30px
+    &__text
+        font-size 14px
+        line-height 1.3em
+        color #555
+        margin-bottom 10px
+        &_title
+            font-size 18px
+            color #222
