--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -647,6 +647,13 @@ block content
                                     +e.name Сергей
                                 +e.text
                             +e.item 3
+                
+                    +b.tabs
+                        +e.item
+                            +e.title 123
+                            +e.text 123
+
+
                 +b.price
                     .container
                         +e.wrapper
