--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -729,6 +729,8 @@
     font-size 14px
     line-height 1.6em
     color #121212
+    section
+        margin-bottom 2em
     h1
     h2
     h3
@@ -746,7 +748,7 @@
     p
         line-height 1.692em
         font-size 1em
-        margin-bottom 1em
+        margin-bottom .9em
 
     a
         color #2e64d0
@@ -778,7 +780,7 @@ ul.list
         background  url(../images/list-item.svg) 0.14em  0.143em no-repeat
         background-size 1.35em 
         margin-bottom 1em
-        line-height 1.6
+        line-height 1.5
 
     &_type
         &_check
