--- a/app/pages/page1.pug
+++ b/app/pages/page1.pug
@@ -716,6 +716,14 @@ block content
                 +b.price
                     .container
                         +e.wrapper
+                            +e.title РАССЧИТАТЬ КОММЕРЧЕСКУЮ СТОИМОСТЬ 
+                            +e.text
+                                blockquote 
+                                    p. 
+                                        <b>Справочно:</b> Правильный и честный подход к формированию конечной стоимости прокладки трубопровода составляется на основании согласованного проекта. На цену влияют огромное количество факторов, к примеру: открытым или закрытым методом целесообразнее прокладывать трубопровод, нужно ли восстанавливать покрытие и т.д. 
+                                        Но ввиду большого опыта, специалисты БК Инвент могут сделать предварительный расчет с небольшой погрешностью. 
+                                        <br>Но, если подрядчик сходу называет конечную стоимость работ, не выезжая и не осматривая местность, стоит насторожиться, так как как минимум подрядчик должен определить каков объем работ, чтобы задать цену
+
                             form.form.ajax
                                 .row
                                     .col.col_size_12.col_size-sm_7
@@ -738,16 +746,16 @@ block content
                                                     .input
                                                         .input__box
                                                             .input__top-border
-                                                            .input__title Кол-во колодцев
+                                                            .input__title Кол-во проектируемых колодцев
                                                             input(name='v' data-min="1" data-max="10" data-grid-num="9" data-from="1" data-max-postfix="+").input__control.range-slider
-                                                        .input__message(data-default="Кол-во колодцев, которые необходимо строить")
+                                                        //.input__message(data-default="Кол-во колодцев, которые необходимо строить")
                                             .form__row
                                                         .input
                                                             .input__box
                                                                 .input__top-border
                                                                 .input__title Диаметр магистральной трубы
                                                                 input(name='v' data-min="1" data-max="10" data-grid-num="9" data-from="1" data-max-postfix="+").input__control.range-slider
-                                                            //.input__message(data-default="7777")
+                                                            .input__message(data-default="Диаметр магистральной трубы (в которую будет осуществляться врезка)")
                                             
                                             
                                             .form__text.form__text_title Материал магистральной трубы:
@@ -805,15 +813,7 @@ block content
                                                 .checkbox__text 
                                                     |Согласен  
                                                     +e({tag: 'a'}).link на обработку персональных данных 
-                                    .col.col_size_12
-                                        +e.text
-                                            blockquote 
-                                                p.
-                                                    <b>Справочно:</b> Правильный и честный подход к формированию конечной стоимости прокладки трубопровода составляется на основании согласованного проекта. На цену влияют огромное количество факторов, к примеру: открытым или закрытым методом целесообразнее прокладывать трубопровод, нужно ли восстанавливать покрытие и т.д.
-                                                    <br>
-                                                    Но ввиду большого опыта, специалисты БК Инвент могут сделать предварительный расчет с небольшой погрешностью. 
-                                                    <br>
-                                                    Но, если подрядчик сходу называет конечную стоимость работ, не выезжая и не осматривая местность, стоит насторожиться, так как как минимум подрядчик должен определить каков объем работ, чтобы задать цену.
+                                    
                 .container
                     +b.stages
                         +e.header Как мы работаем
