--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -2177,6 +2177,9 @@ ul.list
     background #f5f5f5 radial-gradient(at top, #ddd, #f5f5f5)
     padding 40px 0
     box-shadow inset 0px 4px 20px 0px rgba(0,0,0,0.09)
+    &__title
+        font-size 28px
+        margin-bottom 25px
     &__form
     &__calculator
         padding 20px
@@ -2189,7 +2192,7 @@ ul.list
     &__calculator
         grid-area calculator
     &__text
-        margin-top 40px
+        margin-bottom 25px
 
 
 
