--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -730,7 +730,9 @@
     line-height 1.6em
     color #121212
     section
-        margin-bottom 2em
+        margin-bottom 1em
+        @media (min-width 700px)
+            margin-bottom 2em
     h1
     h2
     h3
@@ -1263,9 +1265,11 @@ ul.list
         line-height 1em
         font-size 16px 
         font-weight 600
-        margin-bottom 20px
+        margin-bottom 5px
         @media (min-width 700px)
-            font-size 20px
+            font-size 18px
+    &__links
+        margin-bottom 20px
     &__text
         font-size 14px
         line-height 1.45em
@@ -2173,13 +2177,18 @@ ul.list
         transform translateX(-50%)
 
 .price
-    margin 40px 0
+    //margin 40px 0
     background #f5f5f5 radial-gradient(at top, #ddd, #f5f5f5)
-    padding 40px 0
+    padding 20px 0
+    @media (min-width 700px)
+        padding 40px 0
     box-shadow inset 0px 4px 20px 0px rgba(0,0,0,0.09)
     &__title
-        font-size 28px
+        font-size 22px
+        line-height 1.3em
         margin-bottom 25px
+        @media (min-width 700px)
+            font-size 28px
     &__form
     &__calculator
         padding 20px
@@ -2513,3 +2522,27 @@ ul.list
         margin-bottom -10px
         position relative
         display none 
+
+.triggers
+    padding 25px 0
+    background #fff url('../images/triggers-bg.jpg') no-repeat
+    background-size cover
+    background-attachment fixed
+    &__item
+        padding 10px 0
+        font-size 16px
+        @media (min-width 700px)
+            font-size 18px
+        display flex
+        align-items center
+        img
+            margin-right 20px
+            width auto
+    &__title
+        font-size 22px 
+        @media (min-width 700px)
+            font-size 25px 
+        line-height 1.2em
+        color #000
+        text-align center
+        margin-bottom 5px
