--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -618,7 +618,7 @@
 .offer
     width 100%
     //height 400px
-    padding 5px 0 60px 0
+    padding 5px 0 40px 0
     background #7886ef url(../images/offer.jpg) center no-repeat
     background-size cover
     box-shadow inset 0px 4px 20px 0px rgba(0, 0, 0, 0.2)
@@ -635,7 +635,7 @@
         line-height 1.2em
         color #fff 
         font-weight 700
-        margin-bottom 20px
+        margin 20px 0
         text-shadow 0px 0px 10px rgba(60, 60, 60, 0.4)
         @media (min-width 700px)
             font-size 37px
@@ -771,7 +771,11 @@
         padding-left 16px
         line-height 1.5em
         margin-bottom 1em
-
+    hr
+        width 100%
+        height 1px 
+        margin 15px 0
+        background #e5e6f2
 
 ul.list
     //padding-left 10px
@@ -795,45 +799,51 @@ ul.list
 .breadcrumbs
     width 100%
     //border-bottom 1px solid #ddd
-    margin 20px 0 40px 0
+    margin 12px 0 20px 0
     &__wrapper
         display flex
         flex-direction row
         align-items center
         //margin 20px auto
     &__item
-        font-size 14px
+        font-size 13px
         line-height 1.2em
         display inline-block
         cursor pointer
         margin 0 8px
         color #fff
+        &_active
+            color #c9cce0
+            cursor auto
     &__home
-        width 15px
-        height 13px
+        width 12px
+        height 11px
         background-image url(../images/breadcrumbs__home.png)
         background-size contain
         background-repeat no-repeat
         display inline-block
-        margin -1px 10px 0 0
+        margin -1px 8px 0 0
     &__separator
         position relative
-        width 6px
-        height 5px
+        width 10px
+        height 14px
         display inline-block
-        &:after
+        //&:after
         &:before
             content ""
             position absolute
-            width 7px
-            height 1px
-            background #68686a
-        &:after
-            transform rotate(38deg)
+            width 1px
+            height 14px
+            background #fff
+            transform rotate(25deg)
             top 0
-        &:before
-            transform rotate(-38deg)
-            bottom 0
+            left 50%
+        // &:after
+        //     transform rotate(38deg)
+        //     top 0
+        // &:before
+        //     transform rotate(-38deg)
+        //     bottom 0
 
 .footer
     background #e7e7e7
@@ -2525,9 +2535,10 @@ ul.list
 
 .triggers
     padding 25px 0
-    background #fff url('../images/triggers-bg.jpg') no-repeat
+    background #fff url('../images/triggers-bg.jpg') center no-repeat
     background-size cover
-    background-attachment fixed
+    //background-attachment fixed
+    box-shadow inset 0px 4px 20px 0px rgba(0,0,0,0.09)
     &__item
         padding 10px 0
         font-size 16px
